# doca_dma_2024

./: README.md  dpu.sh  host.sh  meson.build  meson_options.txt
dma_copy_dpu_benchmark/: dma_common.c  dma_common.h  dma_copy_dpu_main.c  dma_copy_dpu_sample.c  meson.build
dma_copy_host_benchmark/: dma_common.c  dma_common.h  dma_copy_host_main.c  dma_copy_host_sample.c  meson.build
